Bug 165604 - Hard to see line color in columns section settings
Summary: Hard to see line color in columns section settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: UI-Theming
  Show dependency treegraph
 
Reported: 2025-03-06 09:16 UTC by Vladislav Tarakanov
Modified: 2025-06-03 11:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
List with light theme, kf5 and white line color (10.11 KB, image/png)
2025-03-06 09:21 UTC, Vladislav Tarakanov
Details
List with dark theme and kf5 (9.51 KB, image/png)
2025-03-06 09:22 UTC, Vladislav Tarakanov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladislav Tarakanov 2025-03-06 09:16:24 UTC
Description:
When selecting the "Style" separator line in the insert (and edit) menu of the columns section, the color of the lines in the drop-down list is set to the value set in the "Color" item. This leads to the fact that with a dark system theme, the color of the line is initially almost invisible to the user, and can also be set to a value corresponding to the background, due to which the line will not be visible at all.

It might be worth changing the current behavior in the "Style" drop-down list: keep the original color for lines, moving the preview somewhere else, or update the background color on which it is drawn to a sufficiently contrasting one along with the line color?

Steps to Reproduce:
1. Open Writer
2. Go to the menu "Insert" - "Section..." - "Columns"
3. For the "Columns" counter, set the value to 2 or more
4. Open the "Style" drop-down list and choose any line
5. In the "Color" field, select a line color value that matches the background color

Actual Results:
With the dark theme, the black color of the lines is initially difficult to see on a dark gray background.

The line color value can be set to a value that will completely blend in with the background color and make it difficult to select the desired line type.

Expected Results:
The line type in the "Style" list can always be distinguished, regardless of the selected color and OS or LO theme


Reproducible: Always


User Profile Reset: No

Additional Info:
Repro with:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 38a4d3f0b095f70deaf1c25617b5f8b378f31626
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: kf5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: CL threaded

Exists at least in:

Version: 6.0.0.1
Build ID: d2bec56d7865f05a1003dc88449f2b0fdd85309a
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk2;
Locale: ru-RU (ru_RU.UTF-8); Calc:CL
Comment 1 Vladislav Tarakanov 2025-03-06 09:21:45 UTC
Created attachment 199645 [details]
List with light theme, kf5 and white line color
Comment 2 Vladislav Tarakanov 2025-03-06 09:22:26 UTC
Created attachment 199646 [details]
List with dark theme and kf5
Comment 3 Heiko Tietze 2025-03-07 09:40:42 UTC
The control is in Page Style > Columns, and in fact it uses the color below. We could treat black as automatic and use either white or black depending on the app background color.
Comment 4 Heiko Tietze 2025-06-02 10:30:03 UTC
Taking this over. At least the line style dropdown is easy to solve. Working now on a better preview on top.
Comment 5 Commit Notification 2025-06-02 11:33:19 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/557526a59c2491d94e2bc86d3a267a67ee5418ee

Resolves tdf#165604 - Make line style color depend on dialog background

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Heiko Tietze 2025-06-03 11:36:28 UTC
(In reply to Heiko Tietze from comment #4)
> Working now on a better preview on top.
Done for bug 132286