Resolves tdf#165604 - Make line style color depend on dialog background

Feedback for the chosen line color should not be done at the line style
dropdown but in the preview

Change-Id: I8cac63eaf1e9c18cb9bed6db8dc899e2ba0eb6bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186129
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>